<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of pets -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/quantityLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:labelFor="@+id/quantityLabel"
            android:text="@string/quantity" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/_20dp"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/gray" />

        <TextView
            android:id="@+id/priceLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:labelFor="@+id/price"
            android:text="@string/price" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/gray" />

        <Button
            android:id="@+id/saleBtn"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:focusable="false"
            android:text="@string/sale" />
    </LinearLayout>


</LinearLayout>

